# db2model

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/db2model/: cli.py
src/db2model/config/: settings.py  type_map.py
src/db2model/generator/python/: __init__.py  column.py  files.py  generator.py  parser.py  raw.py  table.py  templates.py  utils.py
src/db2model/models/: __init__.py  column.py  table.py  table_def.py
